syntax = "proto3";
//import "google/protobuf/timestamp.proto";
message Heatmap {
    uint32 time = 1;
    float max_lat = 2;
    float max_long = 3;
    float min_lat = 4;
    float min_long = 5;
    repeated int32 size = 6;
    repeated double map = 7 [packed = true]; //stores the map as a linear array that needs to be unpacked

}